Fix mobile navigation menu and HTML content rendering

--- a/news/templates/news/article_detail.html
+++ b/news/templates/news/article_detail.html
@@ -30,7 +30,7 @@
         <!-- Article Content -->
         <div class="article-content">
             <div class="content-text">
-                {{ article.content|linebreaks }}
+                {{ article.content|safe }}
             </div>
         </div>
 
