--- a/templates/base.html
+++ b/templates/base.html
@@ -507,6 +507,7 @@
 <body>
     <nav>
         <a href="{% url 'home' %}" class="nav-brand">🏛️ AuctionVistas</a>
+        <a href="{% url 'my_watchlist' %}">My Watchlist</a>
         
         <!-- Hamburger Menu Button -->
         <div class="hamburger-menu" id="hamburger-menu">
