--- a/templates/base.html
+++ b/templates/base.html
@@ -508,6 +508,7 @@
     <nav>
         <a href="{% url 'home' %}" class="nav-brand">🏛️ AuctionVistas</a>
         <a href="{% url 'my_watchlist' %}">My Watchlist</a>
+        <a href="{% url 'discover_auctions' %}">Discover</a>
         
         <!-- Hamburger Menu Button -->
         <div class="hamburger-menu" id="hamburger-menu">
